some change happend

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <section>
-        <div>
+        <div class="half-width">
             <h1>Welcome To</h1>
             <h1> <span class="org-color"> Soumen Baral </span> World </h1>
             <h3>Build Climber and Train Stopper</h3>
@@ -23,8 +23,9 @@
                 That's why I am learning and mastering web development. I will not stop until I become the Web
                 Development
                 Hero.</p>
+            <a class="link-button" href="https://www.linkedin.com/in/shumen-baral-846995192/">Hire Me</a>
         </div>
-        <div>
+        <div class="half-width">
             <img src="images/my-bg.jpg" alt="Soumen">
         </div>
     </section>
