--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1> <span class="org-color"> Soumen Baral </span> World </h1>
@@ -28,6 +28,22 @@
         <div class="half-width">
             <img src="images/my-bg.jpg" alt="Soumen">
         </div>
+
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/my-bg2.jpg" alt="Soumen">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big </h1>
+            <h2>Become a web developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website.
+                I can even teach my grandma
+                how to make simple website. My goal is to build 3 websites and learn advanced topics.
+            </p>
+            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+        </div>
+
     </section>
 </body>
 
