--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexibal-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1> <span class="org-color"> Soumen Baral </span> World </h1>
@@ -30,7 +30,7 @@
         </div>
 
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexibal-container">
         <div class="half-width">
             <img src="images/my-bg2.jpg" alt="Soumen">
         </div>
@@ -45,6 +45,36 @@
         </div>
 
     </section>
+
+    <section class="expariance-area">
+        <h1>Experiences</h1>
+        <div class="flexibal-container ">
+            <div id="expariance-iteam" class="half-width boxshadow">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="org-color">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web.I went beyond with most popular Javascript framework called
+                    VueJS.
+                    I even know the deployment, server and security.
+                    I will give you 100% web solution.
+                </p>
+            </div>
+            <div id="full-stack" class="half-width boxshadow">
+                <h2>Baby Web Developer</h2>
+                <h3 class="org-color">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them.
+                    They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+    </footer>
+
 </body>
 
 </html>
